--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dev": "run-p dev:api dev:web",
     "dev:web": "vite",
     "dev:api": "node server/index.js",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "run-s type-check build:web",
+    "build:web": "vite build",
     "preview": "vite preview",
-    "build-only": "vite build",
+    "start": "node server/index.js",
     "type-check": "vue-tsc --build",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
